includes days updates, bug fixes, sql, properties, allposts, homeposts